2012-03-18  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/xcolors.c:   [RFE 3503317]: XParseColor speedup
	* xlib/rgb.txt:     List of all colors accepted by Tk in Xorg format
	* tests/color.test: Added test case for all colors in rgb.txt

2012-03-04  Jan Nijtmans  <nijtmans@users.sf.net>

	* unix/tcl.m4:    Patch from the cygwin folks
	* unix/configure: (re-generated)

2012-02-28  Donal K. Fellows  <dkf@users.sf.net>

	* doc/canvas.n: [Bug 3495198]: Corrected types of bitmap options.

2012-02-26  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/xcolors.c: Provide fallback for _strtoi64
	* win/configure.in: Detect whether _strtoi64 is available
	* win/configure: (regenerated)

2012-02-15  Jan Nijtmans  <nijtmans@users.sf.net>

	* xlib/xcolors.c: [Bug 3486474]: Inconsistent color scaling
	* generic/tkColor.c: new internal function TkParseColor
	* generic/tkInt.h:
	* generic/tk*.c:   Change XParseColor() to TkParseColor() everywhere.

2012-01-25  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tkImgPhoto.c: [Bug 2433260]: non-critical error in
	Tk_PhotoPutBlock

2011-11-22  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/wish.1: Use the same shebang comment everywhere.
	* library/demos/hello
	* library/demos/rmt
	* library/demos/square
	* library/demos/tcolor
	* library/demos/timer
	* library/demos/widget
	* unix/Makefile.in: [Bug 1945073]: Demo square.tcl
	* win/Makefile.in: cannot run; need package tktest

2011-11-17  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/pack.n: Fix the escaping of leading dots in lines that start with
	a widget name, so that nroff doesn't mistake it as a non-existing macro
	and skips the entire line.

2011-11-17  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>

	* generic/tkCanvas.c: [Bug 3437816]: Missing TCL_ERROR return
	in [canvas lower].

2011-10-11  Jan Nijtmans  <nijtmans@users.sf.net>

	* generic/tk.h:  Add dummy user_data field to
	XVirtualEvent, for improved upwards compatibility
	with Tk 8.5.
